--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -18,10 +20,11 @@
     "eslint-config-next": "13.4.18",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "next": "13.4.18",
+    "next": "^13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "stripe": "^13.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
